[gd_scene load_steps=8 format=3 uid="uid://cwng65wpndg38"]

[ext_resource type="Script" uid="uid://tchibcyjc1bq" path="res://scripts/malevolant_shrine.gd" id="1_2vget"]

[sub_resource type="SphereShape3D" id="SphereShape3D_ou33w"]
radius = 10.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2vget"]
transparency = 1
albedo_color = Color(0, 0, 1, 0.345098)

[sub_resource type="CylinderMesh" id="CylinderMesh_2vget"]
material = SubResource("StandardMaterial3D_2vget")
top_radius = 10.0
bottom_radius = 10.0
height = 0.001

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ou33w"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_2vget"]
material = SubResource("StandardMaterial3D_ou33w")

[sub_resource type="BoxShape3D" id="BoxShape3D_u42ot"]

[node name="MalevolantShrine" type="Area3D"]
script = ExtResource("1_2vget")

[node name="Range" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_ou33w")

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
mesh = SubResource("CylinderMesh_2vget")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
mesh = SubResource("BoxMesh_2vget")
skeleton = NodePath("../..")

[node name="Shrine" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_u42ot")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
